Agragando los servicios de los personajes

--- a/src/app/components/people/people.component.html
+++ b/src/app/components/people/people.component.html
@@ -1,4 +1,21 @@
 
+<h1>Personajes <small>Star Wars</small></h1>
+<hr>
+<div class="card-columns">
+  <div class="card">
+    <img src="assets/img/HanSolo.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <button class="btn btn-outline-primary btn-block">
+        Ver más...
+      </button>
+    </div>
+  </div>
+
+</div>
+<!--
 <div *ngFor='let user of users'>
     <img [src]="user.picture.medium">
     <h2>{{ user.name.first | uppercase }}</h2>
@@ -13,3 +30,4 @@
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
 </div>
+-->
