--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+body {
+  padding-bottom: 50px;
+}
+
 /* You can add global styles to this file, and also import other style files */
 .main-container{
   margin-top: 5px;
