--- a/src/app/components/people/people.component.html
+++ b/src/app/components/people/people.component.html
@@ -1,13 +1,13 @@
 
 <h1>Personajes <small>Star Wars</small></h1>
 <hr>
-<div class="card-columns">
-  <div class="card">
-    <img src="assets/img/HanSolo.jpg" class="card-img-top" alt="...">
+<div class="card-columns" >
+  <div class="card" *ngFor="let people of _peopleService.info">
+    <img [src]="people.img" class="card-img-top" [alt]="people.name">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">{{people.name}}</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text"><small class="text-muted">{{people.created}}</small></p>
       <button class="btn btn-outline-primary btn-block">
         Ver más...
       </button>
@@ -15,6 +15,8 @@
   </div>
 
 </div>
+
+
 <!--
 <div *ngFor='let user of users'>
     <img [src]="user.picture.medium">
