--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -32,9 +32,9 @@
           </div>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      <div class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text"   placeholder="Buscar"  (keyup.enter)="buscarPersonaje(buscarTexto.value)" #buscarTexto >
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="button" (click)="buscarPersonaje(buscarTexto.value)" >Buscar</button>
+      </div>
     </div>
   </nav>
